--- a/container/package.json
+++ b/container/package.json
@@ -23,13 +23,13 @@
     "serve": "npm run build && npm run copyLuigiClient && npm run copyLuigiElement && npm run copyBundle && sirv -D -c test-app --no-clear",
     "bundle:watch": "chokidar \"src/**/*.*\" -c \"npm run build && npm run copyBundle\"",
     "start": "concurrently -k \"npm run serve\" \"npm run bundle:watch\"",
-    "start-examples":"npm run copyBundle && sirv -D -c examples --no-clear",
-    "start-examples-test":"npm run copyBundle && sirv -D -c examples --no-clear --port 2222",
+    "start-examples": "npm run copyBundle && sirv -D -c examples --no-clear",
+    "start-examples-test": "npm run copyBundle && sirv -D -c examples --no-clear --port 2222",
     "cypress-headless": "cypress run -c video=false",
     "cypress-browser": "cypress open --e2e --browser chrome -c video=false",
-    "release":"node release-cli.js",
+    "release": "node release-cli.js",
     "replace-version-in-docu": "node prepareNextRelease.js",
-    "sync-event-typings":"cp src/constants/communication.ts typings/constants/events.d.ts",
+    "sync-event-typings": "cp src/constants/communication.ts typings/constants/events.d.ts",
     "generate-cem": "custom-elements-manifest analyze --globs './src/*.svelte' --outdir './public'"
   },
   "devDependencies": {
@@ -45,10 +45,12 @@
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
     "chokidar-cli": "^3.0.0",
+    "cli-color": "^2.0.4",
     "concurrently": "^7.6.0",
     "cypress": "^12.17.2",
     "eslint": "^8.48.0",
     "eslint-plugin-svelte": "^2.33.0",
+    "github-api": "^3.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "rollup": "2.79.2",
@@ -61,8 +63,7 @@
     "svelte-preprocess": "5.0.4",
     "tslib": "2.6.1",
     "typescript": "5.1.6",
-    "cli-color": "^2.0.4",
-    "github-api": "^3.4.0"
+    "@typescript-eslint/typescript-estree": "^8.13.0"
   },
   "engines": {
     "node": ">=18.19.1"
