Updates client-support-angular to Angular 18 (#4010)

--- a/client-frameworks-support/client-support-angular/angular.json
+++ b/client-frameworks-support/client-support-angular/angular.json
@@ -30,12 +30,9 @@
           }
         },
         "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
+          "builder": "@angular-eslint/builder:lint",
           "options": {
-            "tsConfig": [
-              "projects/client-support-angular/tsconfig.lib.json",
-              "projects/client-support-angular/tsconfig.spec.json"
-            ],
+            "eslintConfig": "eslint.config.mjs",
             "exclude": ["**/node_modules/**"]
           }
         }
@@ -43,6 +40,7 @@
     }
   },
   "cli": {
-    "analytics": false
+    "analytics": false,
+    "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
