--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -6,21 +6,21 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "eslint projects/client-support-angular/src/**/*.* --ignore-pattern **/*.spec.ts",
     "build:lib": "ng build client-support-angular --configuration production",
     "bundle": "ng build client-support-angular --configuration production",
     "bundle-develop": "ng build client-support-angular --watch"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.11",
-    "@angular/common": "^17.3.11",
-    "@angular/compiler": "^17.3.11",
-    "@angular/core": "^17.3.11",
-    "@angular/forms": "^17.3.11",
-    "@angular/platform-browser": "^17.3.11",
-    "@angular/platform-browser-dynamic": "^17.3.11",
-    "@angular/router": "^17.3.11",
+    "@angular/animations": "^18.2.10",
+    "@angular/common": "^18.2.10",
+    "@angular/compiler": "^18.2.10",
+    "@angular/core": "^18.2.10",
+    "@angular/forms": "^18.2.10",
+    "@angular/platform-browser": "^18.2.10",
+    "@angular/platform-browser-dynamic": "^18.2.10",
+    "@angular/router": "^18.2.10",
     "@luigi-project/client": "^2.13.0",
     "@luigi-project/testing-utilities": "^2.13.0",
     "rxjs": "^7.4.0",
@@ -28,13 +28,18 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.11",
+    "@angular-devkit/build-angular": "^18.2.11",
+    "@angular/cli": "^18.2.11",
+    "@angular/compiler-cli": "^18.2.10",
+    "@eslint/js": "^9.14.0",
+    "@stylistic/eslint-plugin": "^2.10.1",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.14.5",
+    "angular-eslint": "18.4.0",
     "codelyzer": "^6.0.2",
     "engine.io": "~6.6.2",
+    "eslint": "^9.14.0",
+    "globals": "^15.12.0",
     "jasmine-core": "~5.1.2",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.3",
@@ -42,11 +47,11 @@
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^17.3.0",
+    "ng-packagr": "^18.2.1",
     "socket.io-adapter": "~2.5.5",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~5.2.2",
+    "typescript": "~5.5.4",
+    "typescript-eslint": "^8.10.0",
     "ws": "~8.17.1"
   },
   "engines": {
