added script cmd for temp releases

--- a/core-modular/package.json
+++ b/core-modular/package.json
@@ -30,7 +30,8 @@
     "build": "vite build",
     "bundle-develop": "vite build --watch",
     "bundle": "npm run build",
-    "simpledev": "node ./dev-tools/simpledev.mjs"
+    "simpledev": "node ./dev-tools/simpledev.mjs",
+    "release": "sh ../../tmp_release.sh"
   },
   "repository": {
     "type": "git",
