--- a/core/examples/luigi-example-angular/package.json
+++ b/core/examples/luigi-example-angular/package.json
@@ -16,8 +16,8 @@
     "@angular/platform-browser": "18.0.0",
     "@angular/platform-browser-dynamic": "18.0.0",
     "@angular/router": "18.0.0",
-    "@luigi-project/client": "2.14.0",
-    "@luigi-project/core": "2.14.0",
+    "@luigi-project/client": "2.18.0",
+    "@luigi-project/core": "2.18.0",
     "@sap-theming/theming-base-content": "11.1.35",
     "fundamental-styles": "0.23.0",
     "rxjs": "6.5.3",
@@ -34,6 +34,7 @@
     "@types/jasmine": "4.3.0",
     "@types/jasminewd2": "2.0.10",
     "@types/node": "8.10.56",
+    "cross-spawn": "^7.0.6",
     "glob-parent": "6.0.2",
     "lodash": "4.17.21",
     "typescript": "5.4.2",
