--- a/core/examples/luigi-example-openui5/package.json
+++ b/core/examples/luigi-example-openui5/package.json
@@ -10,11 +10,12 @@
     "serve": "ws --compress -d dist"
   },
   "dependencies": {
-    "@luigi-project/client": "^2.14.0",
-    "@luigi-project/core": "^2.14.0"
+    "@luigi-project/client": "^2.18.0",
+    "@luigi-project/core": "^2.18.0"
   },
   "devDependencies": {
     "@ui5/cli": "^3.11.1",
+    "cross-spawn": "^7.0.6",
     "local-web-server": "^5.4.0"
   }
 }
