--- a/core/examples/luigi-example-react/package.json
+++ b/core/examples/luigi-example-react/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@luigi-project/client": "^2.14.0",
-    "@luigi-project/core": "^2.14.0",
+    "@luigi-project/client": "^2.18.0",
+    "@luigi-project/core": "^2.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1"
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.24.7",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
+    "cross-spawn": "^7.0.6",
     "express": "^4.21.1",
     "html-webpack-plugin": "^5.6.0",
     "send": "^0.19.0",
