--- a/client-frameworks-support/client-support-angular/tsconfig.json
+++ b/client-frameworks-support/client-support-angular/tsconfig.json
@@ -13,8 +13,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
-    "module": "es2020",
+    "target": "ES2022",
+    "module": "ES2020",
     "lib": [
       "es2020",
       "dom"
@@ -24,12 +24,13 @@
         "dist/client-support-angular/client-support-angular",
         "dist/client-support-angular"
       ]
-    }
+    },
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
-    "strictTemplates": true,
-    "fullTemplateTypeCheck": true,
+    "strictTemplates": true
   }
 }
