--- a/website/docs/package.json
+++ b/website/docs/package.json
@@ -1,66 +1,68 @@
 {
-	"name": "docu-page",
-	"version": "0.0.1",
-	"type": "module",
-	"private": true,
-	"scripts": {
-		"core": "npm run serve-core",
-		"client": "vite dev --port 4001",
-		"clear-ports": "kill -9 $(lsof -ti:4000,4001)",
-		"build": "npm run pre-build && vite build && npm run copy-docs-html",
-		"vite-build": "vite build",
-		"preview": "vite preview --port 4001",
-		"test": "playwright test",
-		"serve-core": "sirv public --single --port 4000",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"test:unit": "vitest",
-		"fetchversions": "curl -H \"Accept: application/vnd.github.v3+json\" https://api.github.com/repos/SAP/luigi/tags?per_page=100 > ./public/versions.json",
-		"pre-build": "sh ./scripts/move-export.sh && npm run fetchversions && npm run compilecorescss && npm run bundleLuigiConfig && npm run generateSitemap && npm run buildMarkdownDocu",
-		"copy-docs-html": "cp -R build/* public/docu-microfrontend",
-		"compilecorescss": "sass --no-source-map ./src/luigi-config/styles/index.scss ./public/coreStyles.css",
-		"bundleLuigiConfig": "esbuild src/luigi-config/extended/main.js  --bundle --minify  --outfile=./public/luigi-config.bundle.js",
-		"buildMarkdownDocu": "node src/markdown-conversion/plugins/buildDocsContent.js",
-		"generateSitemap": "node ./scripts/generate-docu-sitemap.js"
-	},
-	"devDependencies": {
-		"@docsearch/js": "^3.4.0",
-		"@playwright/test": "^1.28.1",
-		"@rollup/plugin-json": "^6.0.0",
-		"@sveltejs/adapter-static": "^3.0.4",
-		"@sveltejs/kit": "^2.5.25",
-		"@types/lodash.orderby": "^4.6.7",
-		"algoliasearch": "^4.17.0",
-		"hastscript": "^9.0.0",
-		"hogan.js": "^3.0.2",
-		"rehype-autolink-headings": "^7.1.0",
-		"rehype-format": "^5.0.0",
-		"rehype-slug": "^6.0.0",
-		"rehype-stringify": "^10.0.0",
-		"rollup": "^4.24.0",
-		"sass": "^1.62.1",
-		"sirv-cli": "^2.0.2",
-		"svelte": "^4.2.8",
-		"svelte-check": "^4.0.0",
-		"typescript": "^5.3.3",
-		"vite": "^5.4.8",
-		"vitest": "^2.0.5"
-	},
-	"dependencies": {
-		"@agentofuser/rehype-section": "^1.0.5",
-		"@luigi-project/client": "2.2.0",
-		"@luigi-project/core": "2.0.1",
-		"esbuild": "^0.18.20",
-		"hast-util-has-property": "3.0.0",
-		"lodash.orderby": "^4.6.0",
-		"rehype-raw": "^7.0.0",
-		"remark-frontmatter": "^5.0.0",
-		"remark-parse": "^11.0.0",
-		"remark-rehype": "^11.1.0",
-		"unified": "^11.0.5",
-		"unist-util-visit": "^5.0.0"
-	},
-	"engines": {
-		"node": ">=18.19.1"
-	}
+  "name": "docu-page",
+  "version": "0.0.1",
+  "type": "module",
+  "private": true,
+  "scripts": {
+    "core": "npm run serve-core",
+    "client": "vite dev --port 4001",
+    "clear-ports": "kill -9 $(lsof -ti:4000,4001)",
+    "build": "npm run pre-build && vite build && npm run copy-docs-html",
+    "vite-build": "vite build",
+    "preview": "vite preview --port 4001",
+    "test": "npx playwright test",
+    "serve-core": "sirv public --single --port 4000",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test:unit": "vitest",
+    "fetchversions": "curl -H \"Accept: application/vnd.github.v3+json\" https://api.github.com/repos/SAP/luigi/tags?per_page=100 > ./public/versions.json",
+    "pre-build": "sh ./scripts/move-export.sh && npm run fetchversions && npm run compilecorescss && npm run bundleLuigiConfig && npm run generateSitemap && npm run buildMarkdownDocu",
+    "copy-docs-html": "cp -R build/* public/docu-microfrontend",
+    "compilecorescss": "sass --no-source-map ./src/luigi-config/styles/index.scss ./public/coreStyles.css",
+    "bundleLuigiConfig": "esbuild src/luigi-config/extended/main.js  --bundle --minify  --outfile=./public/luigi-config.bundle.js",
+    "buildMarkdownDocu": "node src/markdown-conversion/plugins/buildDocsContent.js",
+    "generateSitemap": "node ./scripts/generate-docu-sitemap.js"
+  },
+  "dependencies": {
+    "@agentofuser/rehype-section": "^1.0.5",
+    "@luigi-project/client": "2.18.0",
+    "@luigi-project/core": "2.18.0",
+    "esbuild": "^0.18.20",
+    "hast-util-has-property": "3.0.0",
+    "lodash.orderby": "^4.6.0",
+    "rehype-raw": "^7.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
+  },
+  "devDependencies": {
+    "@docsearch/js": "^3.4.0",
+    "@playwright/test": "^1.49.0",
+    "@rollup/plugin-json": "^6.0.0",
+    "@sveltejs/adapter-static": "^3.0.6",
+    "@sveltejs/kit": "^2.8.5",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
+    "@types/lodash.orderby": "^4.6.7",
+    "algoliasearch": "^4.17.0",
+    "hastscript": "^9.0.0",
+    "hogan.js": "^3.0.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-format": "^5.0.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "rollup": "^4.24.0",
+    "sass": "^1.62.1",
+    "sass-embedded": "^1.81.0",
+    "sirv-cli": "^2.0.2",
+    "svelte": "^4.0.5",
+    "svelte-check": "^4.1.0",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.3",
+    "vitest": "^2.0.5"
+  },
+  "engines": {
+    "node": ">=18.19.1"
+  }
 }
