--- a/core/package.json
+++ b/core/package.json
@@ -21,8 +21,8 @@
     "node-fetch": "2.6.7",
     "sass": "^1.54.0",
     "sinon": "^14.0.0",
-    "svelte": "5.6.2",
-    "svelte-preprocess": "^6.0.3",
+    "svelte": "^4.2.19",
+    "svelte-preprocess": "^5.1.4",
     "typescript": "^4.9.4",
     "vite": "^4.0.0"
   },
