--- a/core/package.json
+++ b/core/package.json
@@ -12,7 +12,7 @@
     "fs-extra": "^11.2.0",
     "fundamental-styles": "0.37.0",
     "jest": "^29.7.0",
-    "jest-fixed-jsdom": "^0.0.9",
+    "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^25.0.1",
     "jsdom-global": "^3.0.2",
     "live-server": "^1.2.2",
