--- a/container/package.json
+++ b/container/package.json
@@ -31,7 +31,6 @@
     "replace-version-in-docu": "node prepareNextRelease.js",
     "sync-event-typings": "cp src/constants/communication.ts typings/constants/events.d.ts",
     "generate-cem": "node generateCEM.js"
-
   },
   "devDependencies": {
     "@babel/node": "7.22.10",
@@ -42,7 +41,7 @@
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.0",
     "@stylistic/eslint-plugin": "^2.10.1",
-    "@tsconfig/svelte": "5.0.0",
+    "@tsconfig/svelte": "5.0.4",
     "@types/jest": "^29.5.12",
     "@typescript-eslint/eslint-plugin": "^8.13.0",
     "@typescript-eslint/parser": "^8.13.0",
@@ -52,7 +51,7 @@
     "concurrently": "^7.6.0",
     "cypress": "^12.17.2",
     "eslint": "^9.14.0",
-    "eslint-plugin-svelte": "^2.46.0",
+    "eslint-plugin-svelte": "^2.46.1",
     "github-api": "^3.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
@@ -61,11 +60,11 @@
     "rollup-plugin-livereload": "2.0.5",
     "rollup-plugin-svelte": "7.2.2",
     "sirv-cli": "^2.0.0",
-    "svelte": "4.2.19",
-    "svelte-check": "3.5.0",
-    "svelte-preprocess": "5.0.4",
+    "svelte": "^5.14.1",
+    "svelte-check": "^4.1.1",
+    "svelte-preprocess": "^6.0.3",
     "tslib": "2.6.1",
-    "typescript": "5.1.6",
+    "typescript": "^5.5.0",
     "typescript-eslint": "^8.13.0"
   },
   "engines": {
