--- a/container/package.json
+++ b/container/package.json
@@ -12,12 +12,12 @@
     "public"
   ],
   "scripts": {
-    "build": "npm run sync-event-typings && npm run generate-cem  && rollup -c",
+    "build": "npm run sync-event-typings && npm run generate-cem && rollup -c --bundleConfigAsCjs",
     "test": "jest",
     "lint": "eslint src/**/*.*",
     "bundle": "npm run build",
-    "dev": "rollup -c -w",
-    "copyBundle": "cp public/bundle.js public/bundle.js.map test-app/ && cp public/bundle.js public/bundle.js.map  examples/ || COPY public\\* test-app\\",
+    "dev": "rollup -c -w --bundleConfigAsCjs",
+    "copyBundle": "cp public/bundle.js public/bundle.js.map test-app/ && cp public/bundle.js public/bundle.js.map examples/ || COPY public\\* test-app\\",
     "copyLuigiClient": "cp ../client/public/luigi-client.js test-app/iframe",
     "copyLuigiElement": "cp ../client/src/luigi-element.js test-app/compound",
     "serve": "npm run build && npm run copyLuigiClient && npm run copyLuigiElement && npm run copyBundle && sirv -D -c test-app --no-clear",
@@ -39,23 +39,23 @@
     "@rollup/plugin-commonjs": "28.0.0",
     "@rollup/plugin-node-resolve": "15.3.0",
     "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "12.1.0",
-    "@stylistic/eslint-plugin": "^2.10.1",
+    "@rollup/plugin-typescript": "12.1.2",
+    "@stylistic/eslint-plugin": "^2.12.1",
     "@tsconfig/svelte": "5.0.4",
-    "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^8.13.0",
-    "@typescript-eslint/parser": "^8.13.0",
-    "@typescript-eslint/typescript-estree": "^8.13.0",
+    "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "@typescript-eslint/typescript-estree": "^8.18.1",
     "chokidar-cli": "^3.0.0",
     "cli-color": "^2.0.4",
     "concurrently": "^7.6.0",
     "cypress": "^12.17.2",
-    "eslint": "^9.14.0",
+    "eslint": "^9.17.0",
     "eslint-plugin-svelte": "^2.46.1",
     "github-api": "^3.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "rollup": "2.79.2",
+    "rollup": "3.29.5",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-livereload": "2.0.5",
     "rollup-plugin-svelte": "7.2.2",
@@ -65,7 +65,7 @@
     "svelte-preprocess": "^6.0.3",
     "tslib": "2.6.1",
     "typescript": "^5.5.0",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.18.1"
   },
   "engines": {
     "node": ">=18.19.1"
