--- a/container/package.json
+++ b/container/package.json
@@ -12,7 +12,7 @@
     "public"
   ],
   "scripts": {
-    "build": "npm run sync-event-typings && npm run generate-cem && rollup -c --bundleConfigAsCjs",
+    "build": "npm run sync-event-typings && npm run generate-cem && rollup -c --bundleConfigAsCjs --strictDeprecations",
     "test": "jest",
     "lint": "eslint src/**/*.*",
     "bundle": "npm run build",
@@ -33,11 +33,11 @@
     "generate-cem": "node generateCEM.js"
   },
   "devDependencies": {
-    "@babel/node": "7.22.10",
-    "@babel/preset-env": "7.22.10",
-    "@babel/preset-typescript": "7.22.5",
+    "@babel/node": "7.26.0",
+    "@babel/preset-env": "7.26.0",
+    "@babel/preset-typescript": "7.26.0",
     "@rollup/plugin-commonjs": "28.0.0",
-    "@rollup/plugin-node-resolve": "15.3.0",
+    "@rollup/plugin-node-resolve": "16.0.0",
     "@rollup/plugin-terser": "0.4.4",
     "@rollup/plugin-typescript": "12.1.2",
     "@stylistic/eslint-plugin": "^2.12.1",
@@ -55,12 +55,12 @@
     "github-api": "^3.4.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "rollup": "3.29.5",
+    "rollup": "4.28.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-livereload": "2.0.5",
     "rollup-plugin-svelte": "7.2.2",
     "sirv-cli": "^2.0.0",
-    "svelte": "^5.14.1",
+    "svelte": "^5.14.4",
     "svelte-check": "^4.1.1",
     "svelte-preprocess": "^6.0.3",
     "tslib": "2.6.1",
