Adds E2E code coverage in container

--- a/container/tsconfig.json
+++ b/container/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "include": [
+    "instrumented/**/*",
     "src/**/*",
     "src/node_modules",
     "test/**/*"
