--- a/.github/workflows/mend.yml
+++ b/.github/workflows/mend.yml
@@ -20,8 +20,8 @@ jobs:
       - uses: actions/cache@v4
         with:
           path: ~/.cache
-          key: whitesource_cache-${{ github.ref }}          
-      - run: sudo apt-get install build-essential python2 libgconf-2-4 libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+          key: whitesource_cache-${{ github.ref }}
+      - run: sudo apt-get install build-essential python2 libgconf-2-4 libgtk2.0-0t64 libgtk-3-0t64 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2t64 libxtst6 xauth xvfb
       - run: npm --prefix ./client ci ./client
       - run: npm --prefix ./core ci ./core
       - run: npm --prefix ./website/landingpage/dev install ./website/landingpage/dev
