--- a/.github/workflows/mend.yml
+++ b/.github/workflows/mend.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           path: ~/.cache
           key: whitesource_cache-${{ github.ref }}
-      - run: sudo apt-get install build-essential python2 libgconf-2-4_3.2.6-7ubuntu2_amd64.deb libgtk2.0-0t64 libgtk-3-0t64 libgbm-dev libnotify-dev libnss3 libxss1 libasound2t64 libxtst6 xauth xvfb
+      - run: sudo apt-get install build-essential python2 libgtk2.0-0t64 libgtk-3-0t64 libgbm-dev libnotify-dev libnss3 libxss1 libasound2t64 libxtst6 xauth xvfb
       - run: npm --prefix ./client ci ./client
       - run: npm --prefix ./core ci ./core
       - run: npm --prefix ./website/landingpage/dev install ./website/landingpage/dev
