--- a/core/package.json
+++ b/core/package.json
@@ -8,8 +8,8 @@
     "@sveltejs/vite-plugin-svelte": "^2.5.3",
     "chai": "^4.3.6",
     "css-tree": "^2.3.1",
-    "fs-extra":"^11.2.0",
-    "fundamental-styles": "0.37.0",
+    "fs-extra": "^11.2.0",
+    "fundamental-styles": "^0.39.0-rc.48",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jsdom": "^20.0.0",
