Fixes scripts in container

--- a/container/package.json
+++ b/container/package.json
@@ -21,11 +21,14 @@
     "copyBundle": "cp public/bundle.js public/bundle.js.map test-app/ && cp public/bundle.js public/bundle.js.map examples/ || COPY public\\* test-app\\",
     "copyLuigiClient": "cp ../client/public/luigi-client.js test-app/iframe",
     "copyLuigiElement": "cp ../client/src/luigi-element.js test-app/compound",
-    "serve": "npm run buildWithCoverage && npm run copyLuigiClient && npm run copyLuigiElement && npm run copyBundle && sirv -D -c test-app --no-clear",
-    "bundle:watch": "chokidar \"src/**/*.*\" -c \"npm run buildWithCoverage && npm run copyBundle\"",
+    "serve": "npm run build && npm run copyLuigiClient && npm run copyLuigiElement && npm run copyBundle && sirv -D -c test-app --no-clear",
+    "serve-test": "npm run buildWithCoverage && npm run copyLuigiClient && npm run copyLuigiElement && npm run copyBundle && sirv -D -c test-app --no-clear",
+    "bundle:watch": "chokidar \"src/**/*.*\" -c \"npm run build && npm run copyBundle\"",
+    "bundle:test": "chokidar \"src/**/*.*\" -c \"npm run buildWithCoverage && npm run copyBundle\"",
     "start": "concurrently -k \"npm run serve\" \"npm run bundle:watch\"",
+    "start-test": "concurrently -k \"npm run serve-test\" \"npm run bundle:test\"",
     "start-examples": "npm run copyBundle && sirv -D -c examples --no-clear",
-    "start-examples-test": "npm run copyBundle && sirv -D -c examples --no-clear --port 2222",
+    "start-examples-test": "npm run buildWithCoverage && npm run copyBundle && sirv -D -c examples --no-clear --port 2222",
     "cypress-headless": "cypress run -c video=false",
     "cypress-browser": "cypress open --e2e --browser chrome -c video=false",
     "nyc-instrument": "npx nyc instrument --compact=false ./src ./instrumented --delete --complete-copy",
