--- a/core/examples/luigi-example-openui5/webapp/manifest.json
+++ b/core/examples/luigi-example-openui5/webapp/manifest.json
@@ -1,5 +1,5 @@
 {
-  "_version": "1.12.0",
+  "_version": "1.60.0",
   "sap.app": {
     "id": "luigi.demo",
     "type": "application",
@@ -23,12 +23,11 @@
     "rootView": {
       "viewName": "luigi.demo.home.Home",
       "type": "XML",
-      "async": true,
       "id": "app"
     },
 
     "dependencies": {
-      "minUI5Version": "1.30",
+      "minUI5Version": "1.120",
       "libs": {
         "sap.m": {},
         "sap.ui.core": {},
@@ -49,8 +48,7 @@
         "viewType": "XML",
         "viewPath": "luigi.demo.view",
         "controlId": "app",
-        "controlAggregation": "pages",
-        "async": true
+        "controlAggregation": "pages"
       },
       "routes": [
         {
