--- a/.github/workflows/container-coverage.yml
+++ b/.github/workflows/container-coverage.yml
@@ -1,4 +1,4 @@
-name: Deploy coverage report for container
+name: Create coverage report for container
 
 on:
   push:
@@ -6,7 +6,8 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  upload:
+    name: Generate Build Artifacts
     runs-on: ubuntu-latest
 
     defaults:
@@ -34,21 +35,13 @@ jobs:
       - name: Generate coverage summary
         run: npm run coverage-summary
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload files to GitHub Pages
-        uses: actions/upload-pages-artifact@v3
+      - name: Upload coverage summary
+        uses: actions/upload-pages-artifact@v4
+        id: artifact-upload-step
         with:
-          path: ./coverage-summary
+          path: ./coverage-summary/index.html
+          retention-days: 7
+          overwrite: true
 
-  deploy:
-    needs: build-and-deploy
-    runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-
-    steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - name: Output artifact URL
+        run:  echo 'Coverage summary -> ${{ steps.artifact-upload-step.outputs.artifact-url }}'
