--- a/.github/workflows/container-coverage.yml
+++ b/.github/workflows/container-coverage.yml
@@ -30,8 +30,13 @@ jobs:
         with:
           node-version: '20.14.0'
 
-      - name: Install dependencies
-        run: npm install
+      - name: Set up cache
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/tmp_build
+          key: buildcache-${{ github.ref }}
+      - run: cp -r ~/tmp_build/* .
 
       - name: Run unit tests
         run: npm run test
