--- a/.github/workflows/container-coverage.yml
+++ b/.github/workflows/container-coverage.yml
@@ -1,16 +1,13 @@
-name: Create coverage report for container
+name: Coverage report for container
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
   upload:
-    name: Generate Build Artifacts
+    name: Code coverage artifact
     runs-on: ubuntu-latest
 
     steps:
@@ -36,11 +33,8 @@ jobs:
 
       - name: Upload coverage summary
         uses: actions/upload-artifact@v4
-        id: artifact-upload-step
         with:
           path: ./container/coverage-summary/index.html
+          name: coverage-summary
           retention-days: 7
           overwrite: true
-
-      - name: Output artifact URL
-        run:  echo 'Coverage summary -> ${{ steps.artifact-upload-step.outputs.artifact-url }}'
