Fixes Next.js example

--- a/core/examples/luigi-example-next/package.json
+++ b/core/examples/luigi-example-next/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "copy:luigi-client": "cp node_modules/@luigi-project/client/luigi-client.js public",
-    "dev": "npm run copy:luigi-client && next dev",
-    "build": "next build && npm run copy:luigi-client",
-    "start": "next start"
+    "copy:luigi-core": "cp node_modules/@luigi-project/core -r public",
+    "copy": "npm run copy:luigi-client && npm run copy:luigi-core",
+    "dev": "npm run copy && next dev",
+    "build": "npm run copy && next build",
+    "start": "npm run build && next start"
   },
   "dependencies": {
-    "@luigi-project/client": "^2.19.0",
-    "@luigi-project/core": "^2.19.0",
+    "@luigi-project/client": "^2.21.2",
+    "@luigi-project/core": "^2.21.2",
     "next": "^14.2.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
