--- a/container/package.json
+++ b/container/package.json
@@ -27,7 +27,7 @@
     "bundle:test": "chokidar \"src/**/*.*\" -c \"npm run buildWithCoverage && npm run copyBundle\"",
     "start": "concurrently -k \"npm run serve\" \"npm run bundle:watch\"",
     "start-test": "concurrently -k \"npm run serve-test\" \"npm run bundle:test\"",
-    "start-examples": "npm run copyBundle && sirv -D -c examples --no-clear",
+    "start-examples": "npm run copyBundle && sirv -D -c examples --no-clear --port 2222",
     "start-examples-test": "npm run buildWithCoverage && npm run copyBundle && sirv -D -c examples --no-clear --port 2222",
     "cypress-headless": "cypress run -c video=false",
     "cypress-browser": "cypress open --e2e --browser chrome -c video=false",
