--- a/.github/workflows/mend.yml
+++ b/.github/workflows/mend.yml
@@ -2,10 +2,19 @@ on:
   push:
     branches:
       - 'main'
+
 name: Whitesource Scan
+
 jobs:
+  update:
+    uses: ./.github/workflows/update-deps.yml
+    secrets: inherit
+    with:
+      buildcache_key: buildcache-${{ github.ref }}
+
   whitesource:
     name: Mend(Whitesource) Scan
+    needs: update
     runs-on: ubuntu-latest
     env:
       WHITESOURCE_APIKEY: ${{ secrets.WHITESOURCE_APIKEY }}
@@ -21,7 +30,6 @@ jobs:
         with:
           path: ~/.cache
           key: whitesource_cache-${{ github.ref }}
-      - run: sudo apt-get update
       - run: sudo apt-get -y install build-essential python-is-python3 libgtk2.0-0t64 libgtk-3-0t64 libgbm-dev libnotify-dev libnss3 libxss1 libasound2t64 libxtst6 xauth xvfb
       - run: npm --prefix ./client ci ./client
       - run: npm --prefix ./core ci ./core
