--- a/.github/workflows/mend.yml
+++ b/.github/workflows/mend.yml
@@ -1,5 +1,5 @@
 on:
-  push:
+  pull_request:
     branches:
       - 'main'
 
@@ -23,9 +23,6 @@ jobs:
         with:
           path: ~/.cache
           key: whitesource_cache-${{ github.ref }}
-      - uses: ./.github/workflows/update-deps
-        with:
-          list-of-deps: 'build-essential python-is-python3 libgtk2.0-0t64 libgtk-3-0t64 libgbm-dev libnotify-dev libnss3 libxss1 libasound2t64 libxtst6 xauth xvfb'
       - run: npm --prefix ./client ci ./client
       - run: npm --prefix ./core ci ./core
       - run: npm --prefix ./website/landingpage/dev install ./website/landingpage/dev
