--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -13,28 +13,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.12",
-    "@angular/common": "^14.2.12",
-    "@angular/compiler": "^14.2.12",
-    "@angular/core": "^14.2.12",
-    "@angular/forms": "^14.2.12",
-    "@angular/platform-browser": "^14.2.12",
-    "@angular/platform-browser-dynamic": "^14.2.12",
-    "@angular/router": "^14.2.12",
-    "@luigi-project/client": "^2.19.2",
-    "@luigi-project/testing-utilities": "^2.19.2",
+    "@angular/animations": "^14.2.13",
+    "@angular/common": "^14.2.13",
+    "@angular/compiler": "^14.2.13",
+    "@angular/core": "^14.2.13",
+    "@angular/forms": "^14.2.13",
+    "@angular/platform-browser": "^14.2.13",
+    "@angular/platform-browser-dynamic": "^14.2.13",
+    "@angular/router": "^14.2.13",
+    "@luigi-project/client": "^2.21.2",
+    "@luigi-project/testing-utilities": "^2.21.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.8",
-    "@angular/cli": "^14.2.10",
-    "@angular/compiler-cli": "^14.2.12",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "^14.3.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "engine.io": "~6.6.2",
+    "engine.io": "~6.6.4",
+    "esbuild": "^0.25.2",
     "express": "~4.21.1",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -43,12 +44,12 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^19.2.2",
+    "ng-packagr": "^14.2.2",
     "socket.io-adapter": "~2.5.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.6.4",
-    "ws": "~8.17.1"
+    "ws": "~8.18.1"
   },
   "engines": {
     "node": ">=18.19.1"
