--- a/core/examples/luigi-example-angular/package.json
+++ b/core/examples/luigi-example-angular/package.json
@@ -25,8 +25,9 @@
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "19.0.1",
-    "@angular-devkit/build-angular": "19.2.8",
+    "esbuild": "^0.25.0",
+    "@angular-builders/custom-webpack": "18.0.0",
+    "@angular-devkit/build-angular": "18.2.18",
     "@angular-devkit/core": "18.0.0",
     "@angular-devkit/schematics": "18.0.0",
     "@angular/cli": "18.0.0",
