--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.13",
-    "@angular/common": "^14.2.13",
-    "@angular/compiler": "^14.2.13",
-    "@angular/core": "^14.2.13",
-    "@angular/forms": "^14.2.13",
-    "@angular/platform-browser": "^14.2.13",
-    "@angular/platform-browser-dynamic": "^14.2.13",
-    "@angular/router": "^14.2.13",
+    "@angular/animations": "20.0.0-next.9",
+    "@angular/common": "20.0.0-next.9",
+    "@angular/compiler": "20.0.0-next.9",
+    "@angular/core": "20.0.0-next.9",
+    "@angular/forms": "20.0.0-next.9",
+    "@angular/platform-browser": "20.0.0-next.9",
+    "@angular/platform-browser-dynamic": "20.0.0-next.9",
+    "@angular/router": "20.0.0-next.9",
     "@luigi-project/client": "^2.21.3",
     "@luigi-project/testing-utilities": "^2.21.3",
     "rxjs": "~6.6.0",
@@ -28,8 +28,8 @@
     "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.13",
-    "@angular/cli": "^14.2.13",
+    "@angular-devkit/build-angular": "20.0.0-next.9",
+    "@angular/cli": "20.0.0-next.9",
     "@angular/compiler-cli": "^14.3.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
