--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -25,12 +25,12 @@
     "@luigi-project/testing-utilities": "^2.21.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.4.0",
-    "zone.js": "~0.11.6"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "20.0.0-next.9",
     "@angular/cli": "20.0.0-next.9",
-    "@angular/compiler-cli": "^14.3.0",
+    "@angular/compiler-cli": "20.0.0-next.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -44,11 +44,11 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^14.2.2",
+    "ng-packagr": "20.0.0-next.8",
     "socket.io-adapter": "~2.5.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.6.4",
+    "typescript": "~5.8.3",
     "ws": "~8.18.1"
   },
   "engines": {
