--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -24,8 +24,7 @@
     "@luigi-project/client": "^2.21.3",
     "@luigi-project/testing-utilities": "^2.21.3",
     "rxjs": "~6.6.0",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "20.0.0-next.9",
@@ -33,17 +32,16 @@
     "@angular/compiler-cli": "20.0.0-next.9",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
     "engine.io": "~6.6.4",
     "esbuild": "^0.25.3",
     "express": "~4.21.1",
-    "jasmine-core": "~3.8.0",
+    "jasmine-core": "~5.7.1",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "ng-packagr": "20.0.0-next.8",
     "socket.io-adapter": "~2.5.5",
     "ts-node": "~8.3.0",
