--- a/.github/workflows/luigi-client-support-angular-release.yml
+++ b/.github/workflows/luigi-client-support-angular-release.yml
@@ -1,4 +1,8 @@
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+    branches:
+    - 4147-own-release-cycle-client-support-lib
+    
 name: Publish Luigi Client Support Angular Release   
 env:
   NPM_LUI_AUTH_TOKEN: ${{ secrets.NPM_LUI_AUTH_TOKEN }}
