change release workflow dispatch line

--- a/.github/workflows/luigi-client-support-angular-release.yml
+++ b/.github/workflows/luigi-client-support-angular-release.yml
@@ -1,6 +1,4 @@
-on: 
-  workflow_dispatch:
-
+on: workflow_dispatch
 name: Publish Luigi Client Support Angular Release   
 env:
   NPM_LUI_AUTH_TOKEN: ${{ secrets.NPM_LUI_AUTH_TOKEN }}
