--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -13,14 +13,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.11",
-    "@angular/common": "^19.2.11",
-    "@angular/compiler": "^19.2.11",
-    "@angular/core": "^19.2.11",
-    "@angular/forms": "^19.2.11",
-    "@angular/platform-browser": "^19.2.11",
-    "@angular/platform-browser-dynamic": "^19.2.11",
-    "@angular/router": "^19.2.11",
+    "@angular/animations": "^20.0.0-rc.1",
+    "@angular/common": "^20.0.0-rc.1",
+    "@angular/compiler": "^20.0.0-rc.1",
+    "@angular/core": "^20.0.0-rc.1",
+    "@angular/forms": "^20.0.0-rc.1",
+    "@angular/platform-browser": "^20.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "^20.0.0-rc.1",
+    "@angular/router": "^20.0.0-rc.1",
     "@luigi-project/client": "^2.21.3",
     "@luigi-project/testing-utilities": "^2.21.3",
     "rxjs": "~6.6.0",
@@ -28,9 +28,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.12",
-    "@angular/cli": "^19.2.12",
-    "@angular/compiler-cli": "^19.2.11",
+    "@angular-devkit/build-angular": "^20.0.0-rc.2",
+    "@angular/cli": "^20.0.0-rc.2",
+    "@angular/compiler-cli": "^20.0.0-rc.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -44,7 +44,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-packagr": "^19.2.2",
+    "ng-packagr": "^20.0.0-rc.0",
     "socket.io-adapter": "~2.5.5",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
