--- a/client-frameworks-support/client-support-angular/tsconfig.json
+++ b/client-frameworks-support/client-support-angular/tsconfig.json
@@ -11,7 +11,7 @@
     "sourceMap": true,
     "declaration": false,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2020",
