--- a/client-frameworks-support/client-support-angular/package.json
+++ b/client-frameworks-support/client-support-angular/package.json
@@ -13,23 +13,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "20.0.0-next.9",
-    "@angular/common": "20.0.0-next.9",
-    "@angular/compiler": "20.0.0-next.9",
-    "@angular/core": "20.0.0-next.9",
-    "@angular/forms": "20.0.0-next.9",
-    "@angular/platform-browser": "20.0.0-next.9",
-    "@angular/platform-browser-dynamic": "20.0.0-next.9",
-    "@angular/router": "20.0.0-next.9",
+    "@angular/animations": "20.0.0-rc.1",
+    "@angular/common": "20.0.0-rc.1",
+    "@angular/compiler": "20.0.0-rc.1",
+    "@angular/core": "20.0.0-rc.1",
+    "@angular/forms": "20.0.0-rc.1",
+    "@angular/platform-browser": "20.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "20.0.0-rc.1",
+    "@angular/router": "20.0.0-rc.1",
     "@luigi-project/client": "^2.21.3",
     "@luigi-project/testing-utilities": "^2.21.3",
     "rxjs": "~6.6.0",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "20.0.0-next.9",
-    "@angular/cli": "20.0.0-next.9",
-    "@angular/compiler-cli": "20.0.0-next.9",
+    "@angular-devkit/build-angular": "20.0.0-rc.2",
+    "@angular/cli": "20.0.0-rc.2",
+    "@angular/compiler-cli": "20.0.0-rc.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "engine.io": "~6.6.4",
